--- a/src/components/About/AboutCom.scss
+++ b/src/components/About/AboutCom.scss
@@ -4,7 +4,7 @@
 
 .about_cls {
   // background-color: $bg-main;
-  background-color: $newbw;
+  background-color: $bg-light;
   // min-height: 150vh;
   color: black;
 
@@ -37,7 +37,7 @@
     position: relative;
     border-radius: 200px 20px;
     // background-color: $accent-color;
-    background-color: $bg-main;
+    background-color: $black-800;
     // border: 5px solid black;
     // width: 450px;/
 
