--- a/src/components/Skills/SkillCom.scss
+++ b/src/components/Skills/SkillCom.scss
@@ -1,85 +1,17 @@
-// /*!----------------######## sk1: Skill section starts #######------------------- */
-// @import "../../variables";
-// @import "../../index.scss";
-
-// @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap");
-
-// .skill_cls {
-//   background-color: #f9f5f2;
-//   color: black;
-
-//   .card1 {
-//     display: flex;
-//     // flex-direction: column;
-//     // flex: 0 0 30.5%;
-//     gap: 10px;
-//     flex-wrap: wrap;
-//     max-height: 70vh;
-//     // justify-content: center;
-
-//     background-color: #fff;
-//     border: 1px solid #282825;
-//     border-radius: 20px;
-//     padding: 20px;
-//     box-shadow: 3px 3px #282825;
-
-//     transition: transform 0.25s cubic-bezier(0.645, 0.045, 0.355, 1),
-//       box-shadow 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
-
-//     // height: inherit;
-
-//     .skill_heading {
-//       // z-index: 2;
-//       // display: flex;
-//       // flex-wrap: wrap;
-//       // align-items: center;
-//       // transition: all 0.3s ease-in-out;
-
-//       h3 {
-//         // color: $accent-color;
-//         background-color: red;
-//         float: right;
-//         font-size: 1.5rem;
-//         font-weight: 800;
-//         transition: all 0.5s ease-in-out;
-//       }
-//     }
-
-//     p {
-//       background-color: rgb(0, 255, 183);
-//     }
-//   }
-
-//   .card11 {
-
-//   }
-// }
-
-// @media (max-width: 630px) {
-//   .grid {
-//     grid-template-areas:
-//       "h h h"
-//       "m m  m"
-//       "ma ma  ma";
-//   }
-// }
-
-/*!----------------######## sk1: Skill section starts #######------------------- */
 @import "../../variables";
 @import "../../index.scss";
 
 .skill_cls {
-  // background-color: $skill-bg;
 
-  background-color: #ffffff;
-  color: black;
+  background-color: $bg-light;
+  // color: bl;
 
 }
 
 .skill_cls .card {
 padding: 0px;
-  // flex: 5;
-  // flex: 0 0 30.5%;
+// transition: all 3s ease-in-out;
+  
   .skill_heading {
     transition: all 0.3s ease-in-out;
     //  background-color: red;
@@ -92,38 +24,29 @@ padding: 0px;
     }
 
     p {
-      // background-color: rgb(0, 255, 183);
       margin-bottom: 15px;
     }
   }
 
-  // h4 {
-  //   font-size: 15px;
-  //   transition: all 0.5s ease-in-out;
-  // }
+  h4 {
+    font-size: 15px;
+    transition: all 0.5s ease-in-out;
+  }
 
   .skill_box {
     display: flex;
     flex-wrap: wrap;
-    // background-color: $black-400;
     justify-content: center;
 
     border-radius: 5px;
-    // padding: 20px;
-    // line-height: rem;
     transition: all 0.5s ease-in-out;
 
     & > * {
       margin: 11px;
-      // flex: 0 0 15%;
-      // border: 1px solid black;
     }
 
     .skill_item {
-      // display:inline-block;
-      // justify-content: center;
-      // justify-content: center;
-      // background-color: rgb(94, 154, 167);
+   
       display: flex;
       flex-direction: column;
       gap: 5px;
@@ -131,18 +54,21 @@ padding: 0px;
       img {
         height: 60px;
         width: 60px;
-        // fill: #e44f26;
+ 
         stroke-width: 2px;
         stroke: #000;
         filter: drop-shadow(5px 5px 1px #0000005f);
       }
       h5 {
         margin: auto;
-        // text-align: center;
+
       }
     }
   }
 }
 
-.card:hover {
-}
+// .skill_cls .card:hover {
+//   box-shadow:$card-box-shadow-high;
+//   transform: translate(-6px,-6px);
+//   background-color: $accent-color;
+// }
