--- a/src/components/Projects/ProjectCom.scss
+++ b/src/components/Projects/ProjectCom.scss
@@ -42,7 +42,7 @@
     // margin-bottom: 17px;
     z-index: 11;
     position: relative;
-    // padding: 20px;
+    padding-bottom: 5px;
     border-bottom: 1px solid black;
 
     h4 {
@@ -62,6 +62,7 @@
       float: right;
       display: block;
       margin-top: -20px;
+
       .proj_info_btn {
         padding: 1px 5px;
       }
@@ -138,7 +139,7 @@
   }
 
   &.show {
-    top: 16%;
+    top: 16.5%;
   }
 }
 
