--- a/src/components/Scrollup/Scroll.scss
+++ b/src/components/Scrollup/Scroll.scss
@@ -26,7 +26,7 @@
 
         background-color: $white-1000;
         border-radius: 50%;
-        box-shadow: $new-box-shadow-low;
+        box-shadow: 2px 2px black;
         border: 2px solid black;
         color: $accent-color;
         cursor: pointer;
@@ -39,8 +39,9 @@
         }
 
         &:hover {
-            transform: translateY(-5px);
+            transform: translate(-3px,-3px);
             background-color: $accent-color;
+            box-shadow: 3px 3px black;
 
             color: $white-1000;
 
@@ -48,7 +49,13 @@
                 margin-top: 2px;
             }
         }
-    }
 
+        &:active {
+            transform: translate(0px,0px)  scale(0.8);
+            box-shadow: 1px 1px black;
+            
+        }
+    }
+ 
    
 }
